Add class banner final frame

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,9 @@ members = [
     "projects/tcp_server",
     "projects/raffle",
 ]
+
+[source.crates-io]
+replace-with = "vendored-sources"
+
+[source.vendored-sources]
+directory = "vendor"
